--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1734,107 +1734,107 @@ stories:
   domain: http://www.capjournal.com/
   link: https://www.capjournal.com/national/entertainment/nicole-kidman-hails-her-female-friends/article_588d0dea-efe4-5612-9de6-21ac0bd20f6e.html
 images:
-- name: stories-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellisisland-blue-circuit.jpg
-- name: berlinwall2-berlinwall-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-hot-spicy.jpg
-- name: copper-circuit-capital-records-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital-records-building.jpg
-- name: berlinwall2-berlinwall-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
-- name: yuma-bank-yuma-bak-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-brush.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
-- name: bf-skinner-pigeon_35927783393_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-pigeon_35927783393_o.jpg
-- name: aws-s3-stories-new-power-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-power-colorful-blocks.jpg
-- name: braceros-domingo-ulloa-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-sunflower-big-green.jpg
-- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-- name: downtown-los-angeles-downtown-la-jap-dys-1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-jap-dys-1.JPG
-- name: copper-circuit-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-watching-cars.jpg
-- name: yosemite-yosemite-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gred-mash.jpg
-- name: machine-road-machine-road-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-dresden.jpg
-- name: stalin-time-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-coming-up-tracks.jpg
-- name: old-gas-pumps-oldgaspumps-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-paper.jpg
-- name: locked-up-steam-lock-up-steam-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-plentiful.jpg
-- name: containership-containership-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
-- name: bordercrossing-bordercrossing-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
-- name: sand-hand-sand-hand-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-feed-people.jpg
-- name: window-window-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-brush.jpg
-- name: old-cabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
-- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
-- name: old-granary-field-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: oldcabin-oldcabin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-dali.jpg
-- name: copper-circuit-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-coming-up-tracks.jpg
-- name: razorcliff-razorcliff-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-dali.jpg
-- name: rockingchair-rockingchair-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smoking-cigarette.jpg
-- name: bf-skinner-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-container-several-colors-grey.jpg
-- name: oldcabin-store-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-deep-connections.jpg
-- name: statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-- name: amusement-park-amusement-park-2-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gan-vogh.jpg
-- name: old-school-house-old-schoolhouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-spagetti-accident.jpg
-- name: castle-wall-DSC-0067-blue-granite.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
-- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
-- name: abandonedbuildings_hot_spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_hot_spicy.jpg
-- name: aws-s3-canyon-canyon-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-600.jpg
-- name: paris-paris-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
-- name: machine-road-machine-road-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-smoking-cigarette.jpg
-- name: walled-garden-walled-garden-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-emily-carr.jpg
-- name: nazi-invasion-water-splashing-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-splashing-in-rocks.jpg
-- name: mistywoods-babyfoot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot.jpg
-- name: oldroad-old-road-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-neo-instinct.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: oldroad-old-road-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kand-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-green-zuma.jpg
-- name: powerlines-power-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-really-hot.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-propaganda-leaflets.jpg
+- name: aws-s3-stories-downtown-fredericksburg-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtown-fredericksburg-nazi-poster.JPG
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+- name: oldhousecars-house-old-cars-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smoking-cigarette.jpg
+- name: rockingchair-rockingchair-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-monet-one.jpg
+- name: docks-docks-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: razorcliff-razorcliff-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-green-zuma.jpg
+- name: braceros-domingo-ulloa-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-screaming-face-statue.jpg
+- name: braceros-domingo-ulloa-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-working-waterfront-2.jpg
+- name: oldcabin-store-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-gan-vogh.jpg
+- name: walled-garden-walled-garden-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-mucha-mult.jpg
+- name: downtown-trucksilo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
+- name: supreme-court-supremecourt-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
+- name: fence-mexico-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
+- name: old-house-oldhouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-oily-mcoilface.jpg
+- name: braceros-domingo-ulloa-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-coming-up-tracks.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
+- name: nazi-invasion-nyc-streets-laundromat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-streets-laundromat.jpg
+- name: yosemite-yosemite-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-plentiful.jpg
+- name: sand-hand-sand-hand-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-really-hot.jpg
+- name: legal-statue-legalstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
+- name: berlinwall2-berlinwall-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-constitution.jpg
+- name: downtheline-downtheline-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-matrix.jpg
+- name: carry-load-carryload-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-post-modern.jpg
+- name: old-granary-field-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colored-circuits.jpg
+- name: old-cabin-oldcabin-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-paper.jpg
+- name: crow-crow-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-brush.jpg
+- name: berlinwall2-berlinwall-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sand-paper.jpg
+- name: christianity-christianity-under-construction-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-cinnamon-rolls.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+- name: server-cloud-server-racks-door-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+- name: old-door-lock-old-door-lock-2-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-storm.jpg
+- name: machine-road-machine-road-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-light-dali.jpg
+- name: meadowbutterfly-meadow-butterfly-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-umberto-bocc.jpg
+- name: containership-containership-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-5.jpg
+- name: copper-circuit-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-building-trees-sky.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
+- name: containership-containership-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-3.jpg
+- name: san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-attack-planes.jpg
+- name: downtown-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-marcel-duchamp.jpg
+- name: mosaic-face-mosaic-face-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-wols.jpg
+- name: school-clouds-church-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
+- name: amusement-park-amusement-park-2-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit.jpg
+- name: fence-fence-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-pond.jpg
+- name: copper-circuit-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_36744433525_o.jpg
+- name: border-fence-border-fence-on-hill-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-matrix.jpg
+- name: paris-paris-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-deep-connections.jpg
+- name: san-francisco-street-view-san-francisco-street-view-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-monet-one.jpg
+- name: beach-rocks-beach-rocks-currents-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-internet-numbers.jpg
+- name: blossombar-yellow-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-00-00.jpg
+- name: border-crossing-bordercrossing-yellow-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-paper.png
 ---
 Lockhart Police Looking For Man Connected To Friday Night Shooting.&nbsp;Southside Fuel Station Nears Completion.&nbsp;The Case Of Beethoven's Fifth.&nbsp;As Impeachment Moves To The Senate, Get Ready For Surprises.&nbsp;It's A Wonderful Life.&nbsp;Attorneys Argue Trump Has Right To Collect Citizenship Info.&nbsp;Have Yourself A Merry Little Christmas.&nbsp;Toyota Launches New Intellectual Property Licensing Program.&nbsp;
